@@ -5,7 +5,7 @@ use Test::More;
 
 use Future;
 use Future::AsyncAwait;
-use Future::Utils qw(fmap);
+use Future::Utils qw(fmap_void);
 
 use Myriad;
 
@@ -21,7 +21,7 @@ package Service::RPC {
     }
 
     async method reverse : RPC (%args) {
-        return {reverse => 'esrever'};
+        return {reversed => scalar reverse("$args{v}")};
     }
 };
 
@@ -38,18 +38,22 @@ subtest 'RPCs should not block each others in the same service'  => sub {
             die shift;
         });
         await $myriad->loop->delay_future(after => 0.25);
-        my $start_time = time;
 
         # if one RPC doesn't have messages it should not block the others
         for my $i (0..10) {
-            await (fmap {
-                my $rpc = shift;
-                $myriad->rpc_client->call_rpc('service.rpc', $rpc)->catch(sub {warn shift});
-            } foreach => ['echo', 'ping'], concurrent => 3);
+            await Future->needs_any(
+                fmap_void(async sub {
+                    my $rpc = shift;
+                    my $response = await $myriad->rpc_client->call_rpc('service.rpc', $rpc)->catch(sub {warn shift});
+                    if ( $rpc eq 'ping' ) {
+                         cmp_ok $response->{response}{time}, '==', time, 'Ping Matching Time';
+                    } elsif ( $rpc eq 'echo' ) {
+                        like $response->{response}, qr//, 'Got echo response';
+                    }
+                }, foreach => ['echo', 'ping'], concurrent => 3),
+                $myriad->loop->timeout_future(after => 1)
+            );
         }
-        my $done_time = time;
-
-        is($done_time - $start_time < 1, 1, 'RPCs are not blocking each others');
     })->()->get();
 };
 
@@ -70,6 +74,10 @@ subtest 'RPCs should not block each others in different services, same Myriad in
             async method twenty_five : RPC (%args) {
                 return 25;
             }
+
+            async method double : RPC (%args) {
+                return $args{v} * 2;
+            }
         };
 
         my $myriad = new_ok('Myriad');
@@ -84,21 +92,24 @@ subtest 'RPCs should not block each others in different services, same Myriad in
         });
         await $myriad->loop->delay_future(after => 0.25);
 
-        my $start_time = time;
         # if one service's RPC doesn't have messages it should not block the others
 
         for my $i (0..10) {
-            await (fmap {
-                my ($service, $rpc) = shift->%*;
-                $myriad->rpc_client->call_rpc($service, $rpc);
-            } foreach => [
-                {'service.rpc' => 'echo'}, {'service.rpc' => 'ping'},
-                {'another.rpc' => 'zero'}, {'another.rpc' => 'five'},
-            ], concurrent => 6);
+            await Future->needs_any(
+                fmap_void(async sub {
+                    my ($service, $rpc, $args, $res) = shift->@*;
+                    my $response = await $myriad->rpc_client->call_rpc($service, $rpc, %$args);
+                    is_deeply $response, $res, "Matching response $service:$rpc";
+                }, foreach => [
+                    ['service.rpc' => 'echo'   , { hi => 'echo' }    , { response => { hi => 'echo' } } ],
+                    ['service.rpc' => 'reverse', { v => 'reverseme' }, { response => { reversed => 'emesrever' } } ],
+                    ['another.rpc' => 'double' , { v => 4 }          , { response => 8 } ],
+                    ['another.rpc' => 'five'   , {}                  , { response => 5 } ],
+                ], concurrent => 6),
+                $myriad->loop->timeout_future(after => 1),
+            );
+            # Calling ping RPC here where it return time is inefficient as we might go to the next second.
         }
-        my $done_time = time;
-
-        is($done_time - $start_time < 1, 1, 'RPCs are not blocking each others');
     })->()->get();
 };
 
